wacc/test/golden/syntaxErr.sequence.doubleSeq
# missing sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin 
  skip;;
  skip 
end


In test/wacc_examples/invalid/syntaxErr/sequence/doubleSeq.wacc (line 12, column 8):
unexpected ";"
expected begin, exit, free, fst, identifier, if, print, println, read, return, skip, snd, type, or while
extra semi-colons are not valid, there must be exactly one between each statement
> begin 
>   skip;;
>        ^
>   skip 
